# BaseballCV

./: .gitattributes  BaseballCV.ipynb  README.md  all_together.py  cleanLabels.py  glove_data.yaml  pyproject.toml  requirements.txt  working.py
.github/workflows/: build.yml  pages.yml  pypi-publish.yml  sync-docs.yml
baseball_rubber_home_glove/baseball_rubber_home_glove/train/: labels.cache
baseball_rubber_home_glove/baseball_rubber_home_glove/valid/: labels.cache
baseballcv/: __init__.py
baseballcv/datasets/: README.md  __init__.py
baseballcv/datasets/processing/: datasets_processor.py
baseballcv/datasets/translation/: dataset_translator.py  formats.py
baseballcv/functions/: README.md  __init__.py  baseball_tools.py  load_tools.py  load_tools_dev.py  savant_scraper.py
baseballcv/functions/utils/: __init__.py
docs/: Gemfile  _config.yml  index.md
docs/package-docs/: technical-reference.md
docs/repository-structure/: index.md
docs/using-repository/: custom-pipelines.md  index.md  training-pipeline.md
runs/detect/train/: args.yaml
streamlit/savant_video_app/: app.py  requirements.txt
tests/: README.md  conftest.py  test_imports.py
tests/test_datasets/: test_datasets_coco_detection.py  test_datasets_jsonl_detection.py  test_datasets_processor.py  test_datasets_translator.py
tests/test_functions/: test_baseball_tools.py  test_dataset_tools.py  test_load_tools.py  test_savant_scraper.py
tests/test_model/: test_detr.py  test_florence2.py  test_model_function_utils.py  test_paligemma.py  test_rfdetr.py  test_yolov9.py
(+4148 files in other folders)
