[build-system]
requires = ["poetry-core==2.1.2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "baseballcv"
version = "0.1.24"
authors = [
    { name="Dylan Drummey", email="dylandrummey22@gmail.com" },
    { name="Carlos Marcano", email="c.marcano@balldatalab.com" }
]
description = "A collection of tools and models designed to aid in the use of Computer Vision in baseball."
readme = "README.md"
requires-python = ">=3.9, !=3.9.7, <4.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/dylandru/BaseballCV"
"Bug Tracker" = "https://github.com/dylandru/BaseballCV/issues"
Documentation = "https://baseballcv.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["baseballcv*"]

[tool.poetry.dependencies]
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
pandas = "^2.2.3"
polars = "^1.27.1"
datasets = "3.4.0"
ultralytics = "^8.3.116"
mediapipe = "0.10.21"
coco-eval = "0.0.4"
pytorch-lightning = "2.5.0"
dotenv = "^0.9.9"
rfdetr = "~1.1.0"
torch = ">=2.6.1"
supervision = "^0.26.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
streamlit = "^1.44.1"
streamlit-image-coordinates = "^0.2.1"
streamlit-drawable-canvas = "^0.9.3"
google = "3.0.0"
google-generativeai = "0.8.5"
pytest-cov = "^6.2.1"


[tool.poetry.group.extras.dependencies]
yolov9 = {git = "https://github.com/BaseballCV/yolov9.git"}
